--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
         <link rel="icon" type="image/x-icon" href="/bok.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Bok</title>
+        <script src="https://cdn.jsdelivr.net/npm/react-scan/dist/auto.global.js"></script>
     </head>
     <body>
         <div id="root"></div>
